# cdnns

./: .clang-format  .editorconfig  CMakeLists.txt  LICENSE  README.md  test_bench.c
include/: cdnns.h
libs/conv2d/: core.h
libs/elu/: core.c  core.h  impl_basic.c  impl_cuda.cu
libs/leakyrelu/: core.c  core.h  impl_basic.c  impl_cuda.cu
libs/linear/: core.c  core.h  impl_basic.c  impl_cuda.cu
libs/relu/: core.c  core.h  impl_basic.c  impl_cuda.cu
libs/sigmoid/: core.c  core.h  impl_basic.c  impl_cuda.cu
libs/softmax/: core.c  core.h  impl_basic.c  impl_cuda.cu
libs/tanh/: core.c  core.h  impl_basic.c  impl_cuda.cu
test_bench/: test_bench.c
test_bench/test_params/: bias_1.txt  weight_1.txt  weight_2.txt
test_params/: bias_2.txt
